# AccioLauncher

./: .gitignore  CLAUDE.md  README.md  accio_launcher.spec  build.bat  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
src/core/: config.py  downloader.py  formatting.py  game_data.py  game_manager.py  installer.py  system_checks.py  updater.py  version_utils.py
src/data/: games.json
src/ui/: action_panel.py  background_widget.py  carousel.py  changelog_dialog.py  flow_layout.py  fonts.py  game_card.py  game_detail.py  game_operations.py  glow_button.py  info_panel.py  main_window.py  particles.py  settings_panel.py  speed_tracker.py  styles.py  title_bar.py  toggle_switch.py  utils.py  versions_dialog.py  video_player.py
tests/: test_config.py  test_downloader.py  test_game_data.py  test_game_manager.py  test_installer.py  test_speed_tracker.py  test_version_utils.py
